--- a/css/style.css
+++ b/css/style.css
@@ -173,46 +173,7 @@
   font-family: roboto-Thin;
   font-weight: normal;
 }
-.navbar {
-  /*background-color: transparent;*/
-}
 
-.top-nav-collapse {
-  /*background-color: rgba(96, 125, 139, 0.8);*/
-}
-
-@media only screen and (max-width: 768px) {
-  .navbar {
-    /*background-color: rgba(233, 30, 99, 0.7);*/
-  }
-}
-
-/*.nav-link {
-  -webkit-transition: 3.55s;
-  -o-transition: 2.55s;
-  color: #000 !important;
-  transition: 3.55s;
-}
-.nav-link:hover {
-  background-color: #d7aa74;
-  /*-webkit-transition: 4.55s;*/
-  /*-o-transition: 4.55s;*/
-  /*transition: 4.55s;*/
-  color: #fff !important;
-}*/
-.dropdown-item:hover{
-  background-color: #f0be82;
-  webkit-box-shadow: 0 5px 11px 0 rgba(0,0,0,.18),0 4px 15px 0 rgba(0,0,0,.15);
-  box-shadow: 0 5px 11px 0 rgba(0,0,0,.18),0 4px 15px 0 rgba(0,0,0,.15);
-  color: #fff;
-  /*-webkit-border-radius: .125rem;*/
-  padding-left: 3px;
-  padding-right: 3px;
-  /*border-radius: .125rem;*/
-  -webkit-transition: all .1s linear;
-  -o-transition: all .1s linear;
-  transition: all .1s linear;
-}
 .section-padding {
   padding-top: 150px;
   padding-bottom: 150px;
@@ -221,485 +182,19 @@
   padding-top: 100px;
   padding-bottom: 100px;
 }
-.footer-text {
-  color: #272e4b !important;
+
+.tick-blue-text {
+  color: #0F3661;
 }
 
-/* Required height of parents of the Half Page Carousel for proper displaying carousel itself */
-html,
-body,
-.view {
-  height: 100%; }
-
-  /* Half Page Carousel itself*/
-  .carousel {
-    height: 70%; }
-    .carousel .carousel-inner {
-      height: 100%; }
-      .carousel .carousel-inner .carousel-item,
-      .carousel .carousel-inner .active {
-        height: 100%; }
-
-        /* Adjustment for mobile devices*/
-        @media (max-width: 776px) {
-          .carousel {
-            height: 100%; } }
-
-            /* Navbar animation */
-.navbar {
-  /*background-color: rgba(0, 0, 0, 0.2); */
-}
-  
-  .default-bg-color {
-    background-color: #f0be82 !important;
-  }
-  .text-default {
-    color: #f0be82 !important;
-  }
-
-  .default-border-color {
-    background-color: #f0be82 !important;
-  }
-  .top-nav-collapse {
-    /*background-color: #929FBA; */
-  }
-
-    /* Adding color to the Navbar on mobile */
-    @media only screen and (max-width: 768px) {
-      .navbar {
-        background-color: #929FBA; } }
-
-  .default-bg-color-transparent{
-    background-color: rgba(240,190,130, 0.5);
-  }
-
-  .select-element:hover ~ .overlay > img{
-    filter: none;
-    -webkit-filter: none;
-    -o-filter: none;
-  }
-
-  .ads-row {
-    width: 100%;
-    background: #f0be82;
-    background-image: url(../img/ads/HP_shelf_full_width_bg.png); /* fallback */
-    background-size: cover;
-    background-repeat: no-repeat;
-    /*flex-direction: row;*/
-    height: 125px;
-    color: #ffffff;
-  }
-
-  .image-container {
-    width: 90px;
-    height: 90px;
-    padding-right: 10px;
-    padding-left: 20px;
-  }
-
-  .message-container {
-    font-size: 32px;
-  }
-
-  .ui-button {
-    margin-right: 20px;
-    font-size: 18px;
-    padding: 15px 35px;
-  }
-
-  .collection-image-cover {
-    background-image: url(../img/places/restaurant/places/collection/normal_amala-bukka-rs.jpg); /* fallback */
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 8rem;
-  }
-  .collection-image-cover2 {
-    background-image: url(../img/places/restaurant/places/collection/normal_Best-Cafes-Lagos-Nigeria.jpg); /* fallback */
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 8rem;
-  }
-  .collection-image-cover3 {
-    background-image: url(../img/places/restaurant/places/collection/normal_Best-healthy-food-nigeria.jpg); /* fallback */
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 8rem;
-  }
-  .collection-image-cover4 {
-    background-image: url(../img/places/restaurant/places/collection/normal_best-romantic-restaurants-lagos-nigeria.jpg); /* fallback */
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 8rem;
-  }
-  .collection-image-cover5 {
-    background-image: url(../img/places/restaurant/places/collection/normal_Ice-cream-food-30981067-1440-900.jpg); /* fallback */
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 8rem;
-  }
-  .collection-image-cover6 {
-    background-image: url(../img/places/restaurant/places/collection/normal_o_TGIF_Stacked-Burger-LR.jpg); /* fallback */
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 8rem;
-  }
-  .collection-image-cover7 {
-    background-image: url(../img/places/restaurant/places/collection/normal_Rooftop-bars.jpg); /* fallback */
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 8rem;
-  }
-  .collection-image-cover8 {
-    background-image: url(../img/places/restaurant/places/collection/normal_shisha.jpg); /* fallback */
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 8rem;
-  }
-  .collection-image-cover9 {
-    background-image: url(../img/places/restaurant/places/collection/normal_Best-healthy-food-nigeria.jpg); /* fallback */
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 8rem;
-  }
-
-  .collection-item {
-    /*-webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);*/
-    /*box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);*/
-    border-radius: 0.375rem;
-    border: 1px solid #d9d9d9;
-  }
-
-  .rest-card {
-    min-height: 127.233px;
-  }
-
-
-
-  /*/////////////////////////////////////////////////////////////////////*/
-  /*/////// Micheal Iyanda ////////////*/
-
-  .intro-2 {
-    background: rgba(240, 240, 240, 0.6) url('../img/bg-noise-867a64f4a090fcaa19c0c1531b5bf1863feb109a15ac8de23d7f6cf4ff43de10.png') center center fixed;
-    /*background-size: cover;*/
-    background-repeat: repeat;
-  }
-  .top-nav-collapse {
-    background-color: #3f51b5 !important;
-  }
-  .navbar:not(.top-nav-collapse) {
-    /*background: transparent !important;*/
-  }
-  @media (max-width: 768px) {
-    .navbar:not(.top-nav-collapse) {
-      background: #3f51b5 !important;
-    }
-  }
-
-  .card {
-    background-color: #fff;
-  }
-  .md-form label {
-    color: #ffffff;
-  }
-  h6 {
-    line-height: 1.7;
-  }
-
-  html,
-  body,
-  header,
-  .view {
-    height: 100%;
-  }
-
-  @media (min-width: 560px) and (max-width: 740px) {
-    html,
-    body,
-    header,
-    .view {
-      height: 650px;
-    }
-  }
-
-  @media (min-width: 800px) and (max-width: 850px) {
-    html,
-    body,
-    header,
-    .view  {
-      height: 650px;
-    }
-  }
-
-  .card {
-    margin-top: 30px;
-    /*margin-bottom: -45px;*/
-
-  }
-
-  .form-control:focus {
-    box-shadow: none !important;
-    border-color: #ff9800 !important;
-  }
-
-  .md-form input[type=text]:focus:not([readonly]),
-  .md-form input[type=password]:focus:not([readonly]) {
-    border-bottom: 1px solid #8EDEF8;
-    box-shadow: 0 1px 0 0 #8EDEF8;
-  }
-  .md-form input[type=text]:focus:not([readonly])+label,
-  .md-form input[type=password]:focus:not([readonly])+label {
-    color: #8EDEF8;
-  }
-
-  .md-form .form-control {
-    color: #fff;
-  }
-
-  .navbar.navbar-dark form .md-form input:focus:not([readonly]) {
-    border-color: #8EDEF8;
-  }
-
-  @media (min-width: 800px) and (max-width: 850px) {
-    .navbar:not(.top-nav-collapse) {
-      background: #3f51b5!important;
-    }
-  }
-.header-bot {
-  width: 100%;
-  float: left;
-  padding: 70px 0 90px 0;
-}
-.header-bot h2 {
-  /*font-family: 'GothamRnd-Medium_0';*/
-  font-size: 45px;
-  text-align: center;
-  color: #fa8815;
-  text-transform: uppercase;
-  padding-top: 50px;
+.picky-text{
+  color: #EE5556;
 }
 
-.header-bot h2 p {
-  font-size: 45px;
-  text-align: center;
-  color: #fff;
-  text-transform: uppercase;
+.picky-button {
+  background-color: #F25453;
 }
 
-.serch-fill {
-  width: 1050px;
-  float: none;
-  background-color: #FFF;
-  border-radius: 30px;
-  margin: 30px auto 0 auto;
-  height: 52px;
-  line-height: 55px;
-  box-shadow: 0px 0px 0px 8px rgba(0,0,0,0.5);
+.default-bg-color{
+  background-color: #0F3661;
 }
-
-.categories {
-  width: 185px;
-  height: 52px;
-  line-height: 52px;
-  border-radius: 100px 0px 0px 100px;
-  border: none;
-  margin: 0 0 0 0px;
-  box-sizing: border-box;
-  font-size: 16px;
-  color: #fa8815;
-  background: url(../img/arow.png) right center no-repeat #fff;
-  position: relative;
-  /*font-family: 'GothamRnd-Book_0';*/
-  float: left;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  padding: 0 0 0 25px;
-  box-sizing: border-box;
-}
-
-.companies {
-  width: 235px;
-  height: 52px;
-  line-height: 52px;
-  border-radius: 100px 0px 0px 100px;
-  border: none;
-  margin: 0 0 0 0px;
-  box-sizing: border-box;
-  font-size: 16px;
-  color: #006600;
-  background: url(../img/arow-green.png) right center no-repeat #fff;
-  position: relative;
-  float: left;
-  /*font-family: 'GothamRnd-Book_0';*/
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  padding: 0 0 0 25px;
-  box-sizing: border-box;
-}
-
-.find {
-  width: 382px;
-  float: left;
-  border: none;
-  outline: none;
-  height: 48px;
-  line-height: 52px;
-  margin: 0px 5px 0 20px;
-  /*line-height: 26px;*/
-  color: #343434;
-  /*font-family: 'GothamRnd-Book_0';*/
-  font-size: 16px;
-}
-
-.find-jobs {
-  width: 171px;
-  float: right;
-  background-color: #fa8815;
-  border-radius: 30px;
-  /*font-family: 'GothamRnd-Medium_0';*/
-  font-size: 20px;
-  color: #FFF;
-  border: none;
-  height: 46px;
-  text-transform: uppercase;
-  outline: none;
-  line-height: 46px;
-  margin: 3px 4px 0 0;
-  cursor: pointer;
-}
-
-.cate {
-  width: 100%;
-  float: left;
-  background-color: #fff9db;
-  border-bottom: #e5e0c6 solid 1px;
-  border-top: 1px solid #e5e0c6;
-}
-
-.wrap2 {
-  width: 100%;
-  max-width: 1156px;
-  margin: 0 auto;
-}
-
-.main-categorie {
-  width: 100%;
-  float: left;
-}
-
-.main-categorie ul {
-  list-style: none;
-  margin: 0px;
-  padding: 0px;
-}
-.main-categorie ul li:first-child {
-  border-left: solid 1px #e5e0c5;
-}
-.main-categorie ul li {
-  line-height: normal;
-  float: left;
-}
-
-.main-categorie ul li a {
-  font-size: 16px;
-  color: #6f6f6f;
-  text-align: center;
-  /*font-family: 'GothamRnd-Medium_0';*/
-  padding: 30px 44px 30px 44px;
-  display: block;
-  border-right: solid 1px #e5e0c5;
-  text-transform: uppercase;
-}
-
-.main-categorie ul li a i.list-icon1 {
-  background-position: 14px top;
-}
-.main-categorie ul li a i {
-  width: 42px;
-  height: 37px;
-  margin: 0 auto 8px auto;
-  display: flex;
-  background: url(../img/jobs-list-icon.png) left top no-repeat;
-      background-position-x: left;
-      background-position-y: top;
-}
-
-.main-categorie ul li a span {
-  display: block;
-}
-
-.main-categorie ul li a i.list-icon2 {
-  background-position: -44px top;
-}
-.main-categorie ul li a i {
-  width: 42px;
-  height: 37px;
-  margin: 0 auto 8px auto;
-  display: flex;
-  background: url(../img/jobs-list-icon.png) left top no-repeat;
-      background-position-x: left;
-      background-position-y: top;
-}
-
-.main-categorie ul li a i.list-icon3 {
-  background-position: -109px top;
-}
-.main-categorie ul li a i {
-  width: 42px;
-  height: 37px;
-  margin: 0 auto 8px auto;
-  display: flex;
-  background: url(../img/jobs-list-icon.png) left top no-repeat;
-      background-position-x: left;
-      background-position-y: top;
-}
-
-.main-categorie ul li a i.list-icon4 {
-  background-position: -171px top;
-}
-.main-categorie ul li a i {
-  width: 42px;
-  height: 37px;
-  margin: 0 auto 8px auto;
-  display: flex;
-  background: url(../img/jobs-list-icon.png) left top no-repeat;
-      background-position-x: left;
-      background-position-y: top;
-}
-
-.main-categorie ul li a i.list-icon5 {
-  background-position: -237px top;
-}
-  .main-categorie ul li a i {
-  width: 42px;
-  height: 37px;
-  margin: 0 auto 8px auto;
-  display: flex;
-  background: url(../img/jobs-list-icon.png) left top no-repeat;
-      background-position-x: left;
-      background-position-y: top;
-}
-
-.main-categorie ul li a i.list-icon6 {
-  background-position: -286px top;
-  width: 47px;
-}
-.main-categorie ul li a i {
-  width: 42px;
-  height: 37px;
-  margin: 0 auto 8px auto;
-  display: flex;
-  background: url(../img/jobs-list-icon.png) left top no-repeat;
-      background-position-x: left;
-      background-position-y: top;
-}
-
-.main-categorie ul li a:hover {color: #fa8815;}
-
-.main-categorie ul li a:hover i.list-icon1 {background-position: 14px bottom;}
-.main-categorie ul li a:hover i.list-icon2 {background-position: -44px bottom;}
-.main-categorie ul li a:hover i.list-icon3 {background-position: -109px bottom;}
-.main-categorie ul li a:hover i.list-icon4 {background-position: -171px bottom;}
-.main-categorie ul li a:hover i.list-icon5 {background-position: -237px bottom;}
-.main-categorie ul li a:hover i.list-icon6 {background-position: -286px bottom;}
