--- a/css/style.css
+++ b/css/style.css
@@ -26,10 +26,10 @@
 
 
 /* Rules for sizing the icon. */
-.material-icons.md-18 { font-size: 18px; }
-.material-icons.md-24 { font-size: 24px; }
-.material-icons.md-36 { font-size: 36px; }
-.material-icons.md-48 { font-size: 48px; }
+.material-icons-md-18 { font-size: 18px; }
+.material-icons-md-24 { font-size: 24px; }
+.material-icons-md-36 { font-size: 36px; }
+.material-icons-md-48 { font-size: 48px; }
 
 /* Rules for using icons as black on a light background. */
 .material-icons.md-dark { color: rgba(0, 0, 0, 0.54); }
@@ -187,16 +187,16 @@
   color: #0F3661 !important;
 }
 
-.picky-text{
+.pinky-text{
   color: #EE5556 !important;
 }
-.picky-border{
+.pinky-border{
   border-bottom: 5px solid;
   min-width: 8%;
   border-color: #EE5556 !important;
 }
 
-.picky-button {
+.pinky-button {
   background-color: #F25453 !important;
 }
 
