Working on the animation

--- a/css/style.css
+++ b/css/style.css
@@ -304,13 +304,13 @@ p, h1 {
 .styled-link {
   text-decoration: none;
   outline: none;
-  color: #2196fe;
+  color: #0F3661;
   transition: all 0.25s ease-in; 
 }
 .styled-link:hover,
 .styled-link:focus,
 .styled-link:active {
-  color: #536dfe;
+  color: #EE5556;
 }
 .shadow-1 {
   box-shadow: 0 2px 5px 0 rgba(0,0,0,0.15);
@@ -321,7 +321,7 @@ p, h1 {
 }
 .blue-hover:hover {
   transform: translateY(-5px);
-  mar
+  /*mar*/
   border: none;
   border-bottom: 5px solid #0F3661;
 }
